--- a/schoolwork/class 04/EcommerceStore/EcommerceStoreAPI/appsettings.json
+++ b/schoolwork/class 04/EcommerceStore/EcommerceStoreAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnectionString": "Server=.;Database=EcommerceStoreApiDb;Trusted_Connection=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
