--- a/schoolwork/MovieWorkshop/MovieWorkshop/MovieWorkshopAPI/appsettings.json
+++ b/schoolwork/MovieWorkshop/MovieWorkshop/MovieWorkshopAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnectionString": "Server=.;Database=MovieWorkshopDb;Trusted_Connection=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
