--- a/schoolwork/MovieWorkshop/MovieWorkshop/MovieWorkshopAPI/appsettings.json
+++ b/schoolwork/MovieWorkshop/MovieWorkshop/MovieWorkshopAPI/appsettings.json
@@ -8,5 +8,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Secret": "this is my custom Secret key for authentication"
 }
