Implemented repositories and user endpoint

--- a/homework/BeverageStore/BeverageStoreApi/appsettings.json
+++ b/homework/BeverageStore/BeverageStoreApi/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "SecretKey": {
+    "Key": "Our very custom and very secure secret key that is used for authentication"
+  },
+  "ConnectionStrings": {
+    "DefaultConnectionString": "Server=.;Database=BeverageStoreApi;Trusted_Connection=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
