--- a/homework/BeverageStore/BeverageStoreApi/appsettings.json
+++ b/homework/BeverageStore/BeverageStoreApi/appsettings.json
@@ -5,6 +5,9 @@
   "ConnectionStrings": {
     "DefaultConnectionString": "Server=.;Database=BeverageStoreApi;Trusted_Connection=True"
   },
+  "AppSettings": {
+    "SecretKey": "Our very custom and very secure secret key that is used for authentication"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
