--- a/homework/BeverageStore/DTOs/DTOs.csproj
+++ b/homework/BeverageStore/DTOs/DTOs.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Domain Models\Domain Models.csproj" />
   </ItemGroup>
 
